# magic-python-tutor

./: .gitignore  LICENSE  README.md  gui.py  magic_tutor.py  magic_typer.py  manifest.json  mobile.html  pyproject.toml  sw.js  vercel.json
api/: ask.py  explain.py  groq_tutor.py  index.py  tutor.py
