[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-python-tutor"
version = "0.1.0"
description = "MAGIC TUTOR - A standalone colorful desktop app that teaches Python & dev concepts like you're 5, with real-world stories, live code typing animations, and runnable examples."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "nilabh25bcs10235-beep"}
]
dependencies = [
  "rich>=13.0",
  "customtkinter>=5.2.0",
  "openai>=1.0.0"   # Used by the Groq-powered /api/ask endpoint (Groq is OpenAI compatible)
]
keywords = ["python", "education", "tutor", "teaching", "cli", "rich", "beginner", "kids"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: GTK",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Software Development :: User Interfaces",
]

[project.gui-scripts]
magic-tutor = "gui:main"

[project.urls]
Homepage = "https://github.com/nilabh25bcs10235-beep/magic-python-tutor"
Repository = "https://github.com/nilabh25bcs10235-beep/magic-python-tutor"
Issues = "https://github.com/nilabh25bcs10235-beep/magic-python-tutor/issues"

[tool.setuptools]
py-modules = ["magic_tutor", "magic_typer", "gui"]

[tool.vercel]
entrypoint = "api/index.py"